added footer in index.html; adjusted contact.html with adress tag

--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -1,5 +1,7 @@
 <html>
-    <div>Awesome Street 99,</div>
-    <div>123456 Fantasyland</div>
-    <div>Phone:+49(0)987654321</div>
+    <address>
+        <div>Awesome Street 99,</div>
+        <div>123456 Fantasyland</div>
+        <div>Phone:+49(0)987654321</div>
+    </address>
 </html>
